e2e/linodemachine-controller/byovpc/01-create-cluster.tpl.yml
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeCluster
metadata:
  annotations:
    cluster.x-k8s.io/paused: "true"
  name: linodecluster-sample
spec:
  region: us-sea
  vpcRef:
    kind: LinodeVPC
    name: linodevpc-sample
    namespace: ${NAMESPACE}
    uid: ${VPC_UID}
---
apiVersion: cluster.x-k8s.io/v1beta1
kind: Cluster
metadata:
  annotations:
    cluster.x-k8s.io/paused: "true"
  name: cluster-sample
spec:
  paused: true
  infrastructureRef:
    apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
    kind: LinodeCluster
    name: linodecluster-sample
---
apiVersion: cluster.x-k8s.io/v1beta1
kind: Machine
metadata:
  annotations:
    cluster.x-k8s.io/paused: "true"
  name: machine-sample
spec:
  clusterName: cluster-sample
  bootstrap:
    configRef:
      apiVersion: v1
      kind: "ConfigMap"
      name: "boostrap-sample"
    dataSecretName: bootstrap-data-sample
---
apiVersion: v1
kind: Secret
metadata:
  name: bootstrap-data-sample
data:
  value: dG91Y2ggL29rCg==
