e2e/linodemachine-controller/byovpc/01-create-cluster.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: make createVPC
  - script: |-
      cat <<EOF | kubectl apply -n $NAMESPACE -f -
      apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
      kind: LinodeVPC
      metadata:
        annotations:
            cluster.x-k8s.io/paused: "true"
        name: linodevpc-sample
      spec:
        label: capli-e2e-byovpc-for-all-tests
        region: us-sea
        vpcID: $(make fetchVPCID)
      EOF
  - command: make enableVPC
  - script: |-
      cat <<EOF | kubectl apply -n $NAMESPACE -f -
      apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
      kind: LinodeCluster
      metadata:
        annotations:
          cluster.x-k8s.io/paused: "true"
        name: linodecluster-sample
      spec:
        region: us-sea
        vpcRef:
          kind: LinodeVPC
          name: linodevpc-sample
          namespace: $NAMESPACE
          uid: $(OBJ=linodevpcs/linodevpc-sample make getKubeUid)
      ---
      apiVersion: cluster.x-k8s.io/v1beta1
      kind: Cluster
      metadata:
        annotations:
          cluster.x-k8s.io/paused: "true"
        name: cluster-sample
      spec:
        paused: true
        infrastructureRef:
          apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
          kind: LinodeCluster
          name: linodecluster-sample
      ---
      apiVersion: cluster.x-k8s.io/v1beta1
      kind: Machine
      metadata:
        annotations:
          cluster.x-k8s.io/paused: "true"
        name: machine-sample
      spec:
        clusterName: cluster-sample
        bootstrap:
          configRef:
            apiVersion: v1
            kind: "ConfigMap"
            name: "boostrap-sample"
          dataSecretName: bootstrap-data-sample
      ---
      apiVersion: v1
      kind: Secret
      metadata:
        name: bootstrap-data-sample
      data:
        value: dG91Y2ggL29rCg==
      EOF
