e2e/linodemachine-controller/byovpc/01-vpc-create-options.json
{
    "label": "capli-e2e-byovpc-sample",
    "region": "us-sea",
    "subnets": [
        {
            "ipv4": "10.0.0.0/24",
            "label": "capli-e2e-byovpc-sample"
        }
    ]
}
