e2e/linodemachine-controller/byovpc/02-create-linodemachine.tpl.yml
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeMachine
metadata:
  ownerReferences:
  - apiVersion: cluster.x-k8s.io/v1beta1
    kind: Machine
    name: machine-sample
    uid: ${MACHINE_UID}
  name: linodemachine-sample
spec:
  region: us-sea
  type: g5-nanode-1
