e2e/linodemachine-controller/byovpc/02-create-linodemachine.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |-
      MACHINE_UID="$(OBJ=machines/machine-sample make getKubeUid)" \
      TS="$(TPL="$PWD/02-create-linodemachine.tpl.yml" make renderTestCase)" make runTestSuit
