e2e/linodemachine-controller/byovpc/01-assert.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeVPC
metadata:
  annotations:
    cluster.x-k8s.io/paused: "true"
  name: linodevpc-sample
status:
  ready: true
