e2e/linodemachine-controller/byovpc/02-assert.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeMachine
metadata:
  name: linodemachine-sample
spec:
  region: us-sea
  type: g5-nanode-1
status:
  ready: true
  instanceState: running
